[metadata]
name = flask-management-endpoints
version = 1.1.0
author = Elijah Zupancic
author_email = elijah@zupancic.name
description = A module for adding Spring Actuator style health endpoints to your Flask application
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dekobon/flask-management-endpoints
project_urls =
    Bug Tracker = https://github.com/dekobon/flask-management-endpoints/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
license_files = LICENSE

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
exclude = test_**.py

install_requires=['flask>=1',
                  'requests>=2']